src/assets/global.scss
@use "./fonts";
@use "./content-card";
:root {
  --color-white: #fffefc;
  --color-red: #d63d21;
  --color-beige: #f9f2e0;
  --color-beige-medium: #514b43;
  --color-beige-dark: #1f170c;
  --color-beige-dark-medium: #998875;
  --color-border: #231c124d;
  --divider: 0.5px solid var(--color-border);
}
*,
*::before,
*::after {
  box-sizing: border-box;
  margin: 0;
  scrollbar-width: none;
}
*::selection {
  color: var(--color-white);
  background-color: var(--color-red);
}
html {
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  -webkit-tap-highlight-color: transparent;
}
body {
  font-family: Golos, Arial, Helvetica, sans-serif;
  font-size: 16px;
  font-weight: normal;
  color: var(--color-beige-dark);
  background-color: var(--color-beige);
  @media (width >= 768px) {
    font-size: 20px;
  }
}
#app {
  display: grid;
  grid-template-rows: 1fr min-content;
  max-width: 80rem;
  min-height: 100dvh;
  padding: 0;
  margin: 0 auto;
}
img, svg {
  max-width: 100%;
}
input, button, textarea, select {
  font: inherit;
}
ul {
  padding: 0;
  margin: 0;
  list-style: none;
}
h1, h2, h3, h4, h5, h6 {
  text-wrap: balance;
}
p, li {
  text-wrap: pretty;
}
svg {
  vertical-align: bottom;
}
.container {
  padding: 1.25rem 1rem;
}
.button {
  display: inline-flex;
  gap: 0.25rem;
  align-items: center;
  justify-content: center;
  max-width: 18.75rem;
  padding: 0.625rem 1.875rem;
  color: var(--color-white);
  white-space: nowrap;
  cursor: pointer;
  background: var(--color-beige-dark);
  border: none;
  border-radius: 0.5rem;
  outline: none;
  transition: transform .2s;
  &--block {
    width: 100%;
  }
  &--big {
    padding: 1rem 3.125rem;
    font-weight: 500;
  }
  &:hover,
  &:focus-visible {
    background-color: var(--color-beige-dark-medium);
  }
  &:active {
    transform: scale(.99);
  }
}
a {
  color: var(--color-beige-dark);
  text-decoration: none;
  &.router-link-active {
    color: var(--color-red);
  }
}
.link {
  padding: 0;
  color: var(--color-red);
  cursor: pointer;
  background: none;
  border: none;
  outline: none;
  &:hover,
  &:focus-visible,
  &.router-link-active {
    text-decoration: underline;
  }
}
.tabler-icon {
  width: 1.2em;
  height: 1.2em;
}
.icon-button {
  display: inline-grid;
  place-items: center;
  padding: 0;
  color: var(--color-beige-dark);
  cursor: pointer;
  background: none;
  border: none;
  outline: none;
  .tabler-icon {
    width: 1.375rem;
    height: 1.375rem;
  }
  &:hover,
  &:focus-visible {
    color: var(--color-beige-dark-medium);
  }
}

